<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:id="@+id/fragment_goals"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/nutrition_diet"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/exercise"
        android:paddingHorizontal="20dp"
        android:paddingVertical="20dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit_goals" />

</LinearLayout>